# auxserver_unittests

unittests/: CMakeLists.txt
unittests/abe_tests/: CMakeLists.txt  TestAbeServerObject.cpp
unittests/admin_is_tests/: CMakeLists.txt  IntegrationCounter_stubs.cpp  TestAdminAndISServers.cpp
unittests/common/: GenericServerObjectSuite.cpp  GenericServerObjectSuite.h  ServerObjectsExpects.cpp  ServerObjectsExpects.h
unittests/db_tests/: AuxDbmServerObject_test.cpp  AuxLobbyServerObject_test.cpp  CMakeLists.txt
unittests/fakes/atf/: FakeConnection.cpp  FakeConnection.h  FakeServer.cpp  FakeServer.h
unittests/fakes/auxservercommon/: FakeAuxCommServerObject.cpp  FakeAuxReefAccessor.cpp
unittests/fakes/lobby/: FakeLobby.cpp
unittests/fakes/plib/: ppincludebase_prod.cpp
unittests/jackpot_tests/: CMakeLists.txt  TestJackpotServerObject.cpp
unittests/lobby_tests/: CMakeLists.txt  GenericLobbyTestSuite.cpp  GenericLobbyTestSuite.h  TestAuxGameRestriction.cpp  TestAuxLobbyServerObject.cpp
unittests/mocks/: BaseCollectionOfInstances.h  ExcludeNonMockHeaders.h
unittests/mocks/atf/: AtfCommServerObject_mock.h  AtfDebugAltLogger_mock.cpp  MockAtfCommObjectImpl.cpp  MockAtfCommObjectImpl.h  MockService.h  TimerServer_mock.h
unittests/mocks/auxcommon/: MockAuxgenerictypes.cpp  MockAuxgenerictypes.h  auxdbcommon_mock.h
unittests/mocks/auxiliary/auxdbm/: MainDbmManager_mock.h  MockAuxDbmServerConnDbd.cpp  MockAuxDbmServerConnLobby.h
unittests/mocks/auxiliary/auxlobby/: AuxLobbyServerObject_mock.h
unittests/mocks/auxservercommon/: AuxCommServerObject_mock.h  MockAuxReefAccessor.h  StatusCheckServer_mock.h  auxdbmcommon_mock.h  auxsqlclidbmcommon_mock.h
unittests/mocks/commlib2a/: MockCommInterface.h  MockServerStartParams.cpp  MockServerStartParams.h  commcli_mock.h  commgrdnull_mock.h  commsrv_mock.h  commsrvconn_mock.cpp
unittests/mocks/commlib2a/telemetry/gateway/: client_mock.cpp
unittests/mocks/plib/: MockPIniFile.cpp  MockPIniFile.h  MockPpIncludeBase.h  ppincludebase_mock.cpp  pplogfile_base_mock.cpp  pplogfile_mock.cpp  pplogfile_wrapper_mock.cpp  ppstacktrace_mock.cpp  ppstacktrace_mock.h
unittests/mocks/protocols/: MockOlapMessageProcessor.h  OlapCommon_mock.h  counters_mock.h  dbcommon_mock.h  dbmgenerator_mock.h  dbmserverobjectcommon_mock.h
unittests/race_tests/: CMakeLists.txt  FakeLobbyInit.cpp  FakeRaceData.h  FakeRaceScriptsParser.cpp  TestAuxRaceServerObject.cpp  TestLobbyAndRaceServers.cpp
unittests/stubs/: AtfCommObjectImpl_stubs.cpp  asserts.cpp  atf1_stubs.cpp  atf_connections_stub.cpp  atf_stubs.cpp  aux_stubs.cpp  auxgenerictypes_stubs.cpp  checkserver_stubs.cpp  commlib_factories_stubs.cpp  commlib_interfaces_stubs.cpp  commlib_stubs.cpp  commmonitorlogger_stubs.cpp  jackpot_stubs.cpp  lobby_stubs.cpp  plib_stubs.cpp  ppjsoncomposer_stubs.cpp  protocols_stubs.cpp  telemetry_stubs.cpp  unique_seqid_stubs.cpp
unittests/wrappers/: AuxDbmServerObject.cpp  AuxLobbyGameRestriction.cpp
